vlib/v/checker/tests/comptime_veb_vweb_call_err.vv
import veb
import vweb

fn main() {
	$veb.html('./templates/empty.html')
	$vweb.html('./templates/empty.html')
}
